  * Now attempts up to three (3) rotations
    - Some users have more than two (2) CSR settings
    - Stops at the first match of the target setting or after the third attempt
  * A screen message about `NormalisedCSR` was additionally suppressed
- Improves Generic Menu Handling
  * Now provides a `Return to Main Menu` option on all such menus
- Exposes `MitigatePrimedBuffer` Feature for User Configuration
  * Previously activated by default on all types of firmware
  * A limited base implementation is always active on Non-Apple firmware
  * Can now be extended on by activating a new `mitigate_primed_buffer` token
  * The feature does not operate on Apple firwmare regardless of the token setting
- Amends Filesystem Drivers
  * BTRFS: Adds support for RAID1C34 profiles
    - Ported from Grub2 via https://sourceforge.net/p/refind/code/merge-requests/48/
  * MISC: Tweaks driver name strings and other minor items
- Amends `Big Selection Image` Size Filtering
  * The maximum Big Selection image size is increased to 512px from 320px
  * The Small Selection image maximum is maintained at 256px
- Amends EFI File Validity Checks
  * Apple `Fat` Binaries are now assumed to be always valid on Apple firmware
  * This similarly applies to binaries with missing PE32+ headers


0.13.3.AD (07 Mar 2023):
-----------------------
- Fixes Manual Stanza SubMenuEntries
  * A memory conflict meant that including such entries resulted in RefindPlus hanging
- Fixes UGA Graphics
  * Addresses issue of `UGA-Only` GPUs being always forced into TextOnly mode
- Fixes Misc Alt Build Function Duplication Issues
  * Addresses issues reported using the build process at https://github.com/xaionaro/edk2-builder-docker
    - Updates `LodePNG` to Version 20221108
    - Deduplicates `DebugLog` function and aligns calling convention
- Fixes `Forced Default` Config Settings
  * Forced Defaults, typically based on firmware type, could be skipped under some circumstances
  * This gap has now been closed