@@ -301,6 +301,7 @@ L"\\EFI\\Microsoft\\Boot\\LrsBootmgr.efi,Recovery:\\EFI\\BOOT\\boot.efi,\
 #define LINUX_GUID_VALUE             {0x0FC63DAF, 0x8483, 0x4772, {0x8E, 0x79, 0x3D, 0x69, 0xD8, 0x47, 0x7D, 0xE4}};
 #define GPT_HOME_GUID_VALUE          {0x933AC7E1, 0x2EB4, 0x4F13, {0xB8, 0x44, 0x0E, 0x14, 0xE2, 0xAE, 0xF9, 0x15}};
 #define GPT_SERVER_GUID_VALUE        {0x3B8F8425, 0x20E0, 0x4F3B, {0x90, 0x7F, 0x1A, 0x25, 0xA7, 0x6F, 0x98, 0xE8}};
+#define OC_BOOTSTRAP_GUID_VALUE      {0xBA1EB455, 0xB182, 0x4F14, {0x85, 0x21, 0xE4, 0x22, 0xC3, 0x25, 0xDE, 0xF6}};
 
 // Configuration file variables
 #define KERNEL_VERSION L"%v"
